--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "license": "MIT",
   "devDependencies": {
     "vuepress": "^1.5.3"
+  },
+  "dependencies": {
+    "vuepress-auto-sidebar": "^1.1.1",
+    "vuepress-plugin-auto-sidebar": "^2.3.2"
   }
 }
